--- a/static/css/marker.css
+++ b/static/css/marker.css
@@ -17,3 +17,27 @@
   transition: all 0.2s;
   opacity: 1;
 }
+
+.level1 {
+  width : 75px;
+  height: 75px;
+  font-size: 24px;
+}
+
+.level2 {
+  width : 65px;
+  height: 65px;
+  font-size: 22px;
+
+}
+
+.level3 {
+  width :55px;
+  height: 55px;
+  font-size: 18px;
+}
+
+.level4 {
+  width :45px;
+  height: 45px;
+}
