oneroom mobile 작업중

--- a/templates/mobile_template/main/index.html
+++ b/templates/mobile_template/main/index.html
@@ -462,8 +462,8 @@
         <ul>
             <li><a href="{% url 'mobile:oneroom_index' %}">원룸</a></li>
             <li><a href="#">중고</a></li>
-            <li class="home"><a href="#">홈</a></li>
-            <li><a href="{% url 'mobile:index' %}">커뮤니티</a></li>
+            <li class="home"><a href="{% url 'mobile:index' %}">홈</a></li>
+            <li><a href="#">커뮤니티</a></li>
             <li><a href="#">마이</a></li>
         </ul>
     </nav>
