--- a/templates/mobile_template/base.html
+++ b/templates/mobile_template/base.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-    <script src="../../../static/mobile/js/check-env.js"></script>
+    <script src="{% static 'mobile/js/check-env.js' %}"></script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,7 +12,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
             integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <!-- 공통 script -->
-    <script src="../../../static/mobile/js/com.js"></script>
+    <script src="{% static ' mobile/js/com.js' %}"></script>
     <!-- CSS import -->
     <link rel="stylesheet" href="{% static 'mobile/css/import.css' %}">
     <title>원룸 - toch</title>
