--- a/templates/mobile_template/oneroom/oneroom.html
+++ b/templates/mobile_template/oneroom/oneroom.html
@@ -168,7 +168,7 @@
     </div>
     <script src="//dapi.kakao.com/v2/maps/sdk.js?appkey=98a0001a3486109fd99e7a58b946cfbe&libraries=clusterer,services"></script>
     <script src="{% static 'mobile/js/map.js' %}"></script>
-    <script src="{% static 'js/marker.js' %}"></script>
+    <script src="{% static 'mobile/js/marker.js' %}"></script>
     <script>
         // 마커들을 담을 배열
         let markers = [];
