kakao map cors='anonymous'

--- a/templates/mobile_template/oneroom/oneroom.html
+++ b/templates/mobile_template/oneroom/oneroom.html
@@ -166,7 +166,7 @@
             <a href="{% url 'mobile:oneroom_list' %}" class="fixedLink">LIST</a>
         </div>
     </div>
-    <script src="//dapi.kakao.com/v2/maps/sdk.js?appkey=98a0001a3486109fd99e7a58b946cfbe&libraries=clusterer,services"></script>
+    <script src="//dapi.kakao.com/v2/maps/sdk.js?appkey=98a0001a3486109fd99e7a58b946cfbe&libraries=clusterer,services" crossorigin="anonymous"></script>
     <script src="{% static 'mobile/js/map.js' %}"></script>
     <script src="{% static 'mobile/js/marker.js' %}"></script>
     <script>
