--- a/templates/mobile_template/oneroom/oneroom.html
+++ b/templates/mobile_template/oneroom/oneroom.html
@@ -198,6 +198,12 @@
         }
 
         addAllMarkers();
+
+        // 지도가 확대 또는 축소되면 마지막 파라미터로 넘어온 함수를 호출하도록 이벤트를 등록합니다
+        kakao.maps.event.addListener(map, 'zoom_changed', function () {
+            let level = map.getLevel();
+            current_markers.map(marker => marker.cc.className = `custom_overlay level${level}`);
+        });
     </script>
     <script src="{% static 'mobile/js/toggle.js' %}"></script>
 {% endblock %}
