--- a/static/mobile/css/page.css
+++ b/static/mobile/css/page.css
@@ -99,7 +99,7 @@
 
 /* 원룸페이지 */
 .oneRoomArea{height: 100vh; display: flex; flex-direction: column; position: relative; box-sizing: border-box;} 
-.oneRoomArea .oneRoomList{position: fixed; left: 0; bottom: 8.438rem; width: 100%; background-color: white;}
+.oneRoomList{margin : 2px 10px}
 .oneRoomArea .kakao_map {flex: 1;}
 
 /* 원룸 팝업 */
